--- a/Assets/Docs/ToDo.txt
+++ b/Assets/Docs/ToDo.txt
@@ -8,26 +8,32 @@
     + Resource gathering loop
 + Map grid
 + Bots try to gather random resource instead of just wondering around when in idle state.
-
 - Building
     + Tower
     + !build a2 command
     + Building progress bar
-    - Finish building site that was left by builder
     - Barracks
-- Combat
-    - Unit agro range
-    - Unit fighting
-    - Tower attacking enemies
++ Combat
+    + Unit agro range
+    + Unit fighting
+    + Tower attacking enemies
+    + Tower attack radius
+    + Unit hp bar
++ Unit respawn
 - Jobs
     -Warrior
-- Unit respawn
+- !patrol a1 z9
 - Show resource icon if unit is carrying something
 - Show current task icon or visualize path
-- Bots getting stuck in the building while idle walking
 
 ------------------------------
 Future:
+- Finish building site that was left by builder
+- Update win condition
+- Units can attack buildings
+- Repair
+- Bots getting stuck in the building while idle walking
+- Update players UI
 - building site (units have to carry resources needed for building to the building site to finish building)
 - build zone (sc pylon or radius around any building)
 - BAN LIST
@@ -38,6 +44,8 @@ Future:
 - !kill userName (attack userName if unit is found in agro radius)
 - Commands for bots (specify a sector to work in)
 - Plant trees
+- !move a2
+- after v3-4 refactor and solve all //TODO:s
 
 
 ------------------------------
