--- a/Assets/Docs/ToDo.txt
+++ b/Assets/Docs/ToDo.txt
@@ -4,8 +4,8 @@ Finish playable version to publish.
 + Fix gather state
 + Return resources if there is nothing else to gather on map
 + Fix units getting stuck after combat
-- Start game
-    - Build project to check it working as a standalone
++ Start game
+    + Build project to check it working as a standalone
 - Player join
     - Rework game start UI
 - Create Unit panel UI
@@ -16,6 +16,8 @@ Finish playable version to publish.
 - Gameplay footage 
 - itch.io publish
     - Bot login (Do not store credentials in program)
+- [Bug] Units are able to gather resources from huge distance
++ [Bug] Units forget where they were going after combat
 
 ------------------------------
 
